styles/layout.css
/* Positioning */

/* todo: sort out unity positioning */
/*#unity-container { position: absolute }
#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
#unity-container.unity-mobile { width: 100%; height: 100% }
.unity-mobile #unity-canvas { width: 100%; height: 100% }
#unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
#unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
#unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
#unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
#unity-footer { position: relative }
.unity-mobile #unity-footer { display: none }
#unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
#unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
#unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
*/

/* todo: this should be able to be specialized by style */
#unity-canvas {
  background: #231F20;
  margin-left: 20px;
  margin-top: 20px;
}
#unity-fullscreen-button {
  width: 38px;
  height: 38px;
  background: url('fullscreen-button.png') no-repeat center;
  margin-left: 20px;
}

/*https://dev.to/niorad/keeping-the-footer-at-the-bottom-with-css-grid-15mf*/
html, body {
  /* Positioning */
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}

p {
  text-indent : 2em;
}

main {
  padding: 20px 150px 200px 20px;
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 10px;
  margin-bottom: 20px;
}

#grid {
  display: grid;
  /*grid-template-columns: 1;
  grid-template-rows: 3;*/
  min-height: 100%;
  grid-template-rows: 90px auto 30px;
  grid-template-columns: 100%;
}

.title-strip {
  display:table;
  text-align:center;
  height: 60px;
  width: 100%;
}

.navigation {
  height: 30px;
  display: flex;
  flex-direction: row;
}

.nav-item {
  flex: 1;
}

.option-picker {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.option-item {
  width: 200px;
  height: 200px;
  flex: 200px;
  margin: 5px;
}

.aspect-ratio {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 70%;
}

.aspect-ratio iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0; top: 0;
}

.title-text {
  display:table-cell;
  vertical-align:middle;
  padding: auto;
}

.footer-stripe {
  display:table;
  text-align:center;
  height: 100%;
  width: 100%;
}

.footer-text {
  display:table-cell;
  vertical-align:middle;
  padding: auto;
}

/* Interactivity */

#toggle { display: none; }
#toggle div.youtwit { display: inline-block; }

